2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Work MinGW again.
	* src/rbgtkpagesetupunixdialog.c, rbgtkprinter.c, rbgtkprintjob.c
	rbgtkprintunixdialog.c: Fixed a compiling error on MinGW.

2006-12-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktextiter.c (get_pixbuf): fixed a typo. Bug #1620759.

2006-12-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkdraw.c (gdkdraw_set_colormap): fixed a typo. Bug #1620156.

2006-12-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c (gdkdraw_cairo_set_source_pixbuf):
	- made x and y are optional.
	- moved to Ruby/GdkPixbuf2.

2006-12-05  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktreeview.c (Init_gtk_treeview): added
	GTK_CHECK_VERSION(2,10,0) for GtkTreeViewGridLines.

2006-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrecentchoosermenu.c: Added Gtk::RecentChooserMenu for GTK+-2.10. 

2006-11-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Added Gdk::Window#input_shape_combine_(mask|region), 
	#set_child_input_shapes, #merge_child_input_shapes, #type_hint for GTK+-2.10.

2006-11-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c: Added Gdk::Screen#font_options, #set_font_options, #active_window,
	#window_stack, composited?
	* src/rbgdkdisplay.c: Added Gdk::Display#supports_(shapes|input_shapes) for GTK+-2.10.
	* src/rbgdkcairo.c: Added Gdk::Cairo#set_source_pixmap for GTK+-2.10.
	* src/rbgdkatom.c: Added Gdk::Atom.intern_static_string for GTK+-2.10. 

2006-11-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkpagesetupunixdialog.c: use GTK_CHECK_VERSION(2,10,0)
	instead of HAVE_GTK_GTKPAGESETUPUNIXDIALOG_H.
	Reported by Dobai-Pataky_Balint. (I'm sorry for using 'a') Thanks!

2006-11-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Added Gtk::TreeView#search_entry, #set_search_entry, 
	#set_search_position_func for GTK+-2.10.

2006-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Added Gtk::TreeView::GridLines for GTK+-2.10.