@@ -4,7 +4,7 @@
   rbgtkfilechooserdialog.c -
  
   $Author: mutoh $
-  $Date: 2004/05/16 07:21:17 $
+  $Date: 2006/12/26 16:11:13 $
  
   Copyright (C) 2004 Seiya Nishizawa, Masao Mutoh
 ************************************************/
@@ -33,7 +33,10 @@ fchodiag_initialize(argc, argv, self)
     gparent = NIL_P(parent) ? NULL : GTK_WINDOW(RVAL2GOBJ(parent));
     gaction = NIL_P(action) ? GTK_FILE_CHOOSER_ACTION_OPEN : RVAL2GENUM(action, GTK_TYPE_FILE_CHOOSER_ACTION);
     gback = NIL_P(back) ? NULL : RVAL2CSTR(back);
-    dialog = gtk_file_chooser_dialog_new_with_backend(gtitle, gparent, gaction, gback, NULL);
+    dialog = gtk_file_chooser_dialog_new_with_backend((const gchar*)gtitle, 
+                                                      gparent, gaction, 
+                                                      (const gchar*)gback, 
+                                                      (const gchar*)NULL, NULL);
     RBGTK_INITIALIZE(self, dialog);
     rbgtk_dialog_add_buttons_internal(self, button_ary);
     return Qnil;
