@@ -4,7 +4,7 @@
   rbgtkprinter.c -
 
   $Author: mutoh $
-  $Date: 2006/12/26 15:47:52 $
+  $Date: 2006/12/26 16:11:13 $
 
   Copyright (C) 2006 Ruby-GNOME2 Project Team
 ************************************************/
@@ -12,7 +12,7 @@
 #include "global.h"
 
 #if GTK_CHECK_VERSION(2,10,0)
-#ifdef GTK_PRINTER_GET_TYPE
+#ifdef HAVE_GTK_PRINTER_GET_TYPE
 #include <gtk/gtkprinter.h>
 
 #ifndef GTK_TYPE_PRINT_BACKEND
@@ -135,7 +135,7 @@ void
 Init_gtk_printer()
 {
 #if GTK_CHECK_VERSION(2,10,0)
-#ifdef GTK_PRINTER_GET_TYPE
+#ifdef HAVE_GTK_PRINTER_GET_TYPE
     VALUE gPrinter = G_DEF_CLASS(GTK_TYPE_PRINTER, "Printer", mGtk);
     rb_include_module(gPrinter, rb_mComparable);
 
