@@ -1,3 +1,8 @@
+2006-12-27  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkfilechooserdialog.c, src/rbgdkevent.c: 
+	Fix compiling warning.
+
 2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Work MinGW again.
